# TorSimulator

./: LICENSE  README.md  pyproject.toml
scripts/: gui_circuit_builder.py  interactive_circuit_builder.py
src/tor_simulator/: cell.py  encryption_utils.py  logger.py  node.py
src/tor_simulator.egg-info/: PKG-INFO  SOURCES.txt
tests/: dh_params.pem  test.json  test_circuit.py  test_local_fetch.py
